--- a/registration.css
+++ b/registration.css
@@ -1,75 +1,74 @@
-*{
-    padding: 0;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
     margin: 0;
-}
-body{
-    height: 100vh;
+    padding: 0;
     display: flex;
-    justify-content: center;
     align-items: center;
-    /* background:linear-gradient(rgb(42, 138, 217),rgb(247, 246, 246)); */
-    background-color: rgb(45, 135, 45);
-    
-    
-}
-.reg{
-    background-color: white;
-    border: none;
-    height: 500px;
-    width: 300px;
-    padding: 50px;
-    box-shadow: 0px 3px 15px rgba(56, 56, 56, 0.5);
+    justify-content: center;
+    height: 100vh;
 }
 
-h1{
-    margin-left: 60px;
-    margin-bottom: 20px;
-    color: blue;
+.registration{
+    background-color: #fff;
+    width: 350px;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.registration h2{
+    text-align: center;
+    color: #000000;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    margin-bottom: 8px;
+    color: #555;
+}
+
+input {
+    width: 300px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+button {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px;
+    width: 110px;
+    margin-left: 110px;
+    border: none;
+    border-radius: 4px;
+    font-size: large;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #318936;
+}
+
+label{
+  font-size: large;
+  text-align: center;
 }
 
 a{
-    margin-left: 10px;
-    font-size: large;
-
+  text-decoration: none;
 }
 
-input{
-    margin-left: 10px;
-    width: 260px;
-    height: 35px;
-    margin-bottom: 8px;
-    font-size: large;
-    border: none;
-    background-color: rgb(219, 219, 219);
-}
-
-button{
-    margin-left: 45px;
-    height: 40px;
-    width: 200px;
-    border: none;
-    background-color:rgb(30, 24, 151);
-    color: white;
-    font-size: 20px;
-    cursor: pointer;
-
-}
-
-button:hover{
-    background-color: rgb(42, 145, 37);
-    font-size: 20px;
-}
-
-#acc{
-    font-size: 21px;
-}
-
-
-#link{
-    text-decoration: none;
-    font-size: 20px;
-}
-#link:hover{
-    color: rgb(201, 131, 1);
-    text-decoration: underline;
+a:hover{
+  color: orange;
+  text-decoration: underline;
 }
